# graindb

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  DuckDBConfig.cmake.in  DuckDBConfigVersion.cmake.in  LICENSE  Makefile  README.md
benchmark/: CMakeLists.txt  benchmark_runner.cpp
benchmark/dbwrapper/: CMakeLists.txt  sqlite_benchmark.cpp
benchmark/imdb/: CMakeLists.txt  imdb_optimized.cpp
benchmark/include/: benchmark.hpp  benchmark_runner.hpp  graindb_benchmark.hpp  graindb_benchmark_macro.hpp  sqlite_benchmark.hpp
examples/R/: dbi.R  (+1 more)
scripts/: amalgamation.py  asset-upload.py  boxplot-subplots.py  format.py  generate_dir_plans.py  generate_logs_graph.py  generate_querygraph.py  gentpcecode.py  plan_spectrum.py  plot_boxplot_ablation.py  plot_boxplot_job.py  plot_boxplot_snb.py  plot_boxplot_tpch.py  plot_selectivity.py  plot_spectrum.py  run_tpch.sh  runsqlsmith.py  test_vector_sizes.py
src/: CMakeLists.txt  README.md
src/function/: CMakeLists.txt  cast_rules.cpp  function.cpp
src/function/aggregate/: CMakeLists.txt  algebraic_functions.cpp  distributive_functions.cpp  nested_functions.cpp
src/function/aggregate/algebraic/: CMakeLists.txt  avg.cpp  covar.cpp  stddev.cpp
src/function/aggregate/distributive/: CMakeLists.txt  bitagg.cpp  count.cpp  first.cpp  minmax.cpp  string_agg.cpp  sum.cpp
src/function/aggregate/nested/: CMakeLists.txt  list.cpp
src/function/scalar/: CMakeLists.txt  date_functions.cpp  math_functions.cpp  nested_functions.cpp  operators.cpp  sequence_functions.cpp  string_functions.cpp  trigonometrics_functions.cpp
src/function/scalar/date/: CMakeLists.txt  age.cpp  current.cpp  date_part.cpp  date_trunc.cpp  epoch.cpp
src/function/scalar/math/: CMakeLists.txt  numeric.cpp  random.cpp  setseed.cpp
src/function/scalar/nested/: CMakeLists.txt  list_value.cpp  struct_extract.cpp  struct_pack.cpp
src/function/scalar/operators/: CMakeLists.txt  arithmetic.cpp  bitwise.cpp
src/function/scalar/sequence/: CMakeLists.txt  nextval.cpp
src/function/scalar/string/: CMakeLists.txt  caseconvert.cpp  concat.cpp  contains.cpp  instr.cpp  left_right.cpp  length.cpp  like.cpp  pad.cpp  prefix.cpp  printf.cpp  regexp.cpp  repeat.cpp  replace.cpp  reverse.cpp  strip_accents.cpp  substring.cpp  suffix.cpp  trim.cpp
src/function/table/: CMakeLists.txt  read_csv.cpp  sqlite_functions.cpp
src/function/table/sqlite/: CMakeLists.txt  pragma_collations.cpp  pragma_table_info.cpp  sqlite_master.cpp
src/main/: CMakeLists.txt  appender.cpp  client_context.cpp  connection.cpp  connection_manager.cpp  database.cpp  graindb-c.cpp  materialized_query_result.cpp  prepared_statement.cpp  prepared_statement_data.cpp  query_profiler.cpp  query_result.cpp  relation.cpp  stream_query_result.cpp
src/main/relation/: CMakeLists.txt  aggregate_relation.cpp  create_table_relation.cpp  create_view_relation.cpp  delete_relation.cpp  distinct_relation.cpp  explain_relation.cpp  filter_relation.cpp  insert_relation.cpp  join_relation.cpp  limit_relation.cpp  order_relation.cpp  projection_relation.cpp  read_csv_relation.cpp  setop_relation.cpp  subquery_relation.cpp  table_function_relation.cpp  table_relation.cpp  update_relation.cpp  value_relation.cpp  view_relation.cpp  write_csv_relation.cpp
test/: CMakeLists.txt  unittest.cpp
tools/: release-pip.py  upload-s3.py
tools/jdbc/: CMakeLists.txt
tools/jdbc/src/jni/: graindb_java.cpp
tools/jdbc/src/main/java/nl/cwi/da/graindb/: DuckDBConnection.java  DuckDBDatabase.java  DuckDBDatabaseMetaData.java  DuckDBDriver.java  DuckDBNative.java  DuckDBParameterMetaData.java  DuckDBPreparedStatement.java  DuckDBResultSet.java  DuckDBResultSetMetaData.java  DuckDBVector.java
tools/jdbc/src/test/java/nl/cwi/da/graindb/duckdb/test/: TestDuckDBJDBC.java
tools/rest/: CMakeLists.txt  dbgen.cpp  server.cpp  test_the_rest.py
tools/rest/frontend/: select.html
tools/sqlite3_api_wrapper/: CMakeLists.txt  sqlite3_api_wrapper.cpp
tools/sqlite3_api_wrapper/include/: sqlite3.h
(+1762 files in other folders)
