add_subdirectory(relation)
add_library_unity(graindb_main
                  OBJECT
                  appender.cpp
                  client_context.cpp
                  connection.cpp
                  connection_manager.cpp
                  database.cpp
                  graindb-c.cpp
                  materialized_query_result.cpp
                  prepared_statement.cpp
                  prepared_statement_data.cpp
                  relation.cpp
                  query_profiler.cpp
                  query_result.cpp
                  stream_query_result.cpp)
set(ALL_OBJECT_FILES
    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:graindb_main>
    PARENT_SCOPE)
